--- a/blogspot.html
+++ b/blogspot.html
@@ -16,6 +16,9 @@
             </p>
             <p>suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho para platzi <3 </div>
+        </div>
     </div>
 </body>
 
